--- a/HajosTeszt/HajosTeszt/wwwroot/cv.html
+++ b/HajosTeszt/HajosTeszt/wwwroot/cv.html
@@ -3,53 +3,67 @@
 <head>
     <meta charset="utf-8" />
     <title>önéletrajz</title>
+    <link href="cv.css" rel="stylesheet">
+    <style>
+    </style>
 </head>
 <body>
-    <h1>Sumicz Benedek Máté</h1>
-    <p>Elérhetőségek</p>
-    <ol>
-        <li>Email: benedek.sumicz@stud.uni-corvinus.hu</li>
-        <li><a href=" https://www.facebook.com/benedek.sumicz/" target="_blank">Facebook</a></li>
-        <li>Telefon: +36 20 111-1221</li>
-    </ol>
-    <img src="profil.jpg" alt="ez egy kép rólam" />
-    <hr />
-    <h2>Magamról</h2>
-    <p>
-        Másodéves gazdaságinformatikus hallgató vagyok az egyetemen. Informatika iránti erős
-        érdeklődésem az általános iskola kezdete óta töretlen. <br />Bár a középiskolában eltöltött évek
-        alatt nem ezt részesítettem előnyben, egyéb kompetenciáim fejlesztésével mégis sikerült
-        kompenzálni.
-    </p>
-    <p>
-        Közösség szempontjából a Corvinus a legjobb választásnak minősült egész
-        eddigi életem során, viszont eljött az az idő, amikor a szakma és a<br />közösség együtt válik
-        prioritássá, amihez remélem a diákszervezeti tevékenység ad majd lehetőséget számomra.
-    </p>
-    <hr />
-    <h2>Tanulmányok</h2>
-    <h3>Jelenleg</h3>
-    <div>
-        <ul>
-            <li>Egyetem neve: Budapesti Corvinus Egyetem</li>
-            <li>Kar: Gazdálkodástudományi Kar</li>
-            <li>Képzés: Gazdaságinformatikus BSc</li>
-            <li>Kezdés éve: 2019</li>
-        </ul>
-    </div>
-    <h3>Korábbi</h3>
-    <div>
-        <ul>
-            <li>Intézmény neve: Óbudai Árpád Gimnázium</li>
-            <li>Tanterv / tagozat: speciális angol</li>
-            <li>Kezdés éve: 2015</li>
-            <li>Végzés éve: 2019</li>
-        </ul>
-    </div>
-    <h2>Nyelvismeret</h2>
-    <ul>
-        <li>Angol felsőfok (C1)</li>
-        <li>Spanyol középfok (B2)</li>
-    </ul>
+    <div id="oldal">
+        <h1>Sumicz Benedek Máté</h1>
+        <div id="elerhetoseg" class="blokkok">   
+            <p class="cim">Elérhetőségek</p>
+
+            <ol>
+                <li>Email: benedek.sumicz@stud.uni-corvinus.hu</li>
+                <li>Telefon: +36 20 610-3254</li>
+                <li><a href=" https://www.facebook.com/benedek.sumicz/" target="_blank" id="link">Facebook</a></li>
+            </ol>
+            <img src="profil.jpg" alt="ez egy kép rólam" />
+        </div>
+        <div id="magamrol" class="blokkok">
+            <h2>Magamról</h2>
+            <p>
+                Másodéves gazdaságinformatikus hallgató vagyok az egyetemen. Informatika iránti erős
+                érdeklődésem az általános iskola kezdete óta töretlen. Bár a középiskolában eltöltött évek
+                alatt nem ezt részesítettem előnyben, egyéb kompetenciáim fejlesztésével mégis sikerült
+                kompenzálni.
+            </p>
+            <p>
+                Közösség szempontjából a Corvinus a legjobb választásnak minősült egész
+                eddigi életem során, viszont eljött az az idő, amikor a <span>szakma és a közösség </span> együtt válik
+    prioritássá, amihez remélem a diákszervezeti tevékenység ad majd lehetőséget számomra.
+</p>
+            
+        </div>
+        <div id="tanulmanyok" class="blokkok">
+            <h2>Tanulmányok</h2>
+            
+            <div class="lista">
+                <p class="cim">Jelenleg</p>
+                <ul>
+                    <li>Egyetem neve: <a href="https://www.uni-corvinus.hu/" target="_blank" id="link">Budapesti Corvinus Egyetem</a></li>
+                    <li>Kar: Gazdálkodástudományi Kar</li>
+                    <li>Képzés: Gazdaságinformatikus BSc</li>
+                    <li>Kezdés éve: 2019</li>
+                </ul>
+            </div>
+            <div class="lista">
+                <p class="cim">Korábbi</p>
+                <ul>
+                    <li>Intézmény neve: Óbudai Árpád Gimnázium</li>
+                    <li>Tanterv / tagozat: speciális angol</li>
+                    <li>Kezdés éve: 2015</li>
+                    <li>Végzés éve: 2019</li>
+                </ul>
+            </div>
+        </div>
+        <div id="nyelv" class="blokkok">
+            <h2>Nyelvismeret</h2>
+            <ul>
+                <li>Angol felsőfok (C1)</li>
+                <li>Spanyol középfok (B2)</li>
+            </ul>
+        </div>
+    </div> 
 </body>
 </html>
